Animacoes e layout reformulados
Animacoes e novas sessões adicionadas.

--- a/css/planos.css
+++ b/css/planos.css
@@ -124,12 +124,12 @@ top: -.1em;
 }
 
 
-#plano {
+#planos {
 background-color: #28292A;
-        padding: 50px 0px;
+        padding: 100px 0px;
 }
 
-#plano h1{
+#planos h1{
     color: white;
 
 }
