--- a/css/custom.css
+++ b/css/custom.css
@@ -572,6 +572,18 @@ body {
     text-align: center
 }
 
+#areas {
+  padding: 25px 0px;
+}
+
+#funcionalidades {
+  padding: 80px 0px;
+}
+
+#duvidas {
+  padding: 80px 0px;
+}
+
 .titulo-sobre-2 {
     padding-top: 80px;
 }
@@ -713,3 +725,74 @@ body {
 .notice-default>strong {
     color: #009c67;
 }
+
+
+/* MODAL*/
+/* START OF DEMO CSS - NOT NEEDED */
+#fullscreen {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+/* END OF DEMO CSS */
+
+.modal-slacker {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+    
+}
+
+.modal-slacker .modal-content {
+	margin-top: 5%;
+	border-radius: 0px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	height: 80%;
+	overflow: auto;
+  
+  
+}
+
+
+
+.modal-slacker .modal-header .close {
+	color: #fff;
+	background-color: #009c67;
+	border-color: #009c67;
+	opacity: 1;
+	padding: 10px 17px;
+	font-size: 27px;
+}
+
+.modal-slacker .modal-title {
+	font-size: 34px;
+	font-weight: bold;
+}
+
+#rodape  .modal-body p{
+color: black !important;
+    text-align: justify;
+}
+
+@media (min-width: 992px) {
+	.modal-slacker .modal-header,
+	.modal-slacker .modal-body,
+	.modal-slacker .modal-footer {
+		width: 100%;
+        margin: 50px auto;
+	}
+}
+
+@media (min-width: 768px) {
+	.modal-slacker .modal-header,
+	.modal-slacker .modal-body,
+	.modal-slacker .modal-footer {
+		width: 100%;
+		margin: 30px auto;
+	}
+}
+
+/* FIM MODAL*/
+
+
